--- a/public/ui/pages/app.html
+++ b/public/ui/pages/app.html
@@ -15,6 +15,12 @@
                 <ui-badge variant="warning">warning</ui-badge>
                 <ui-badge variant="error">error</ui-badge>
             </element-container>
+            <h2 class="text-4xl font-bold">Fonts and text</h2>
+            <element-container :direction="1" class="space-x-5 items-center mb-10">
+                <p class="font-sans">info</p>
+                <p>warning</p>
+                <p>error</p>
+            </element-container>
         </element-container>
     </div>
 </template>
