--- a/public/ui/pages/app.html
+++ b/public/ui/pages/app.html
@@ -1,5 +1,5 @@
 <template x-component.unwrap:page="home">
-    <div class="w-full flex flex-col justify-center space-x-2 space-y-5">
+    <div class="w-full flex flex-col justify-center space-x-2 space-y-5 font-sans">
         <h1 class="text-5xl font-bold p-20">Components libreary</h1>
         <element-container class="px-20 space-y-5">
             <h2 class="text-4xl font-bold">Buttons and actions</h2>
@@ -16,10 +16,10 @@
                 <ui-badge variant="error">error</ui-badge>
             </element-container>
             <h2 class="text-4xl font-bold">Fonts and text</h2>
-            <element-container :direction="1" class="space-x-5 items-center mb-10">
-                <p class="font-sans">info</p>
-                <p>warning</p>
-                <p>error</p>
+            <element-container :direction="1" class="space-x-5 items-center mb-10 text-2xl">
+                <p class="font-sans">font sans serif</p>
+                <p class="font-serif">font avec serif</p>
+                <p class="font-mono">font mono</p>
             </element-container>
         </element-container>
     </div>
