feat(routing): added a single app router

--- a/resources/js/spa/router/view.alpine.html
+++ b/resources/js/spa/router/view.alpine.html
@@ -1,44 +1,3 @@
-<template x-html="`<page-${$props.page}></page-${$props.page}>`">
+<template x-html="`<${$store.router.currentPage}></${$store.router.currentPage}>`">
 
 </template>
-
-<script setup>
-    const props = defineProps({
-        page: {
-            type: String,
-            default: "home"
-        }
-    })
-    return {
-        // router: null,
-        // pageContent: '',
-        // pageToImport: null,
-        // init() {
-        //     this.router = new UniversalRouter(this.routes, {
-        //         context: { self: this },
-        //         resolveRoute(context, params) {
-        //             context.self.$route = { params, path: context.pathname }
-        //             if (typeof context.route.action === 'function') {
-        //                 return context.route.action(context, params)
-        //             }
-        //             return context.route.component
-        //         }
-        //     })
-        //     this.onUrlChange()
-        //     window.addEventListener('popstate', e => this.onUrlChange())
-        // },
-        // onUrlChange() {
-        //     let match = window.location.href.match(/#(.*)$/)
-        //     let fragment = match ? match[1] : ''
-        //     this.router.resolve({ pathname: fragment }).then(component => {
-        //         if (component) {
-        //             let pos = component.indexOf('@')
-        //             let from = pos !== -1 ? component.substring(pos + 1) : component.replace('-', ':').replace('-', '/')
-        //             if (pos !== -1) component = component.substring(0, pos)
-        //             this.pageToImport = from
-        //             this.pageContent = `<${component}></${component}>`
-        //         }
-        //     })
-        // },
-    };
-</script>
