feat(components): continued integration

--- a/resources/js/spa/pages/about.alpine.html
+++ b/resources/js/spa/pages/about.alpine.html
@@ -1,8 +1,8 @@
 <template class="block">
     <layout-main>
         <template name="header">
-            Home
+            about
         </template>
-        <ui-button>home</ui-button>
+        <ui-button>about</ui-button>
     </layout-main>
 </template>
