feat: adapted teste app to the new features

--- a/public/spa/pages/home.alpine.html
+++ b/public/spa/pages/home.alpine.html
@@ -1,8 +1,8 @@
 <template>
     <layout-main>
         <template name="header">
-            about
+            Home
         </template>
-        <ui-button>about</ui-button>
+        <ui-button>home</ui-button>
     </layout-main>
 </template>
