--- a/public/spa/router/link.alpine.html
+++ b/public/spa/router/link.alpine.html
@@ -10,4 +10,9 @@
             default: "",
         },
     });
+    return {
+        init() {
+            console.log("hello from link", props);
+        }
+    }
 </script>
