--- a/public/spa/router/view.alpine.html
+++ b/public/spa/router/view.alpine.html
@@ -1,5 +1,7 @@
 <template>
-    <button class="border p-2 m-2" @click="showPage()" x-text="show.value ? 'shown' : 'hidden'"></button>
+    <ui-button class="border p-2 m-2" @click="showPage()" x-text="show.value ? 'shown' : 'hidden'">
+        
+    </ui-button>
     <div x-ref="routerView">
 
     </div>
