refactor: refactoring code of the registery

--- a/public/spa/pages/home.alpine.html
+++ b/public/spa/pages/home.alpine.html
@@ -1,5 +1,7 @@
 <template>
-    <layout-main>
-        <ui-button>home</ui-button>
-    </layout-main>
+    <layout-dev>
+        <div class="border border-gray-900 rounded-2xl mt-10">
+            <p class="text-6xl">Page Home</p>
+        </div>
+    </layout-dev>
 </template>
