--- a/public/spa/pages/about.alpine.html
+++ b/public/spa/pages/about.alpine.html
@@ -1,8 +1,7 @@
 <template>
-    <layout-main>
-        <template name="header">
-            about
-        </template>
-        <ui-button>about</ui-button>
-    </layout-main>
+    <layout-dev>
+        <div class="border border-gray-900 rounded-2xl mt-10">
+            <p class="text-6xl">Page About</p>
+        </div>
+    </layout-dev>
 </template>
